--- a/client/src/components/ConfirmModal.css
+++ b/client/src/components/ConfirmModal.css
@@ -1,29 +1,48 @@
 .modal-overlay {
   position: fixed;
-  top: 0; left: 0;
+  top: 0; 
+  left: 0;
   width: 100%; height: 100%;
   background: rgba(0,0,0,0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 9999;
 }
 
+/* modal container*/
 .modal {
   background: #fff;
-  padding: 20px 30px;
-  border-radius: 8px;
+  padding: 25px 30px;
+  border-radius: 10px;
   width: 90%;
   max-width: 400px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-shadow:  rgba(0,0,0,0.2);
 }
-
+/*modal title*/
+.modal h3 {
+  margin: 0;
+  font-size:1.5rem;
+  color:#111827;
+}
+/*modal message*/
+.modal p {
+  margin: 0;
+  font-size: 1.5rem;
+  color: #4b554b;
+}
+/*button container*/
 .modal-buttons {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  gap: 20px;
 }
 
+/*confirm button*/
 .confirm-btn {
   background-color: #e74c3c;
   color: #fff;
@@ -31,8 +50,15 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  flex: 1;
+  transition: background-color 0.2s;
 }
 
+.confirm-btn:hover {
+  background-color: #dc2626;
+}
+
+/*cancel button*/
 .cancel-btn {
   background-color: #95a5a6;
   color: #fff;
@@ -40,4 +66,12 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-weight: 600;
+  flex: 1;
+  transition: background-color 0.2s;
 }
+
+.cancel-btn:hover {
+  background-color: #4b556b;
+}
+
