--- a/client/src/components/ChatWindow.css
+++ b/client/src/components/ChatWindow.css
@@ -6,34 +6,53 @@
   width: 450px;
   overflow-y: auto;
   background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
 }
 
-.timestamp{
+.timestamp {
   font-size: 0.7rem;
   color: #555;
   margin-top: 2px;
 }
 
 .chat-message {
-  padding: 5px 10px;
+  display: flex;
+  gap: 10px;
   margin: 5px 0;
   border-radius: 10px;
   max-width: 70%;
+  align-items: flex-start;
 }
 
-.sent {
+.chat-message.sent {
   background-color: #dcf8c6;
   align-self: flex-end;
+  flex-direction: row-reverse;
   text-align: right;
 }
 
-.received {
+.chat-message.received {
   background-color: #fff;
   align-self: flex-start;
   text-align: left;
 }
 
+.chat-avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.message-content {
+  padding: 5px 10px;
+  border-radius: 10px;
+  word-wrap: break-word;
+}
+
 .no-messages {
   text-align: center;
   color: #888;
+  margin-top: 20px;
 }
